--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "build:prod": "ng build --configuration production --base-href https://surialpha.github.io/portfolio/",
+    "build:prod": "ng build --configuration production --base-href https://surialpha.github.io/",
     "test:headless": "ng test --watch=false --browsers=ChromeHeadless"
   },
   "private": true,
